<resources>

    <string name="google_client_id" translatable="false">459295234377-fubcot3rmvouf5ju5i6vuui2ocoq8oa0.apps.googleusercontent.com</string>
    <string name="google_image_url" translatable="false">"https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&amp;photo_reference=%1$s&amp;key=%2$s"</string>


    <string name="app_name">Go4Lunch</string>
    <string name="logo_content_description">Application Logo</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="login_title_card">Welcome</string>
    <string name="login_information_card">Please login with your information</string>
    <string name="login">Login</string>
    <string name="new_user_message">New user? Sign Up here</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="other_methods">Use other Methods</string>
    <string name="login_error_message">MAIL OR PASSWORD IS EMPTY</string>

    <string name="signup_information_card">Please enter all your information to get started</string>
    <string name="signup_error_message">MAIL OR PASSWORD OR NAME IS EMPTY</string>
    <string name="signup_name_hint">Full name</string>
    <string name="signup_button">Sign Up</string>

    <string name="home_navigation_lunch">YOUR LUNCH</string>
    <string name="home_navigation_settings">SETTINGS</string>
    <string name="home_navigation_logout">LOGOUT</string>
    <string name="toast_message_user_no_restaurant_chosen">You did not chose where to lunch yet!</string>

    <string name="bottom_bar_map_item">Map</string>
    <string name="bottom_bar_list_item">Restaurants List</string>
    <string name="bottom_bar_workmate_item">Workmates List</string>

    <string name="onboarding_privacy_message">Don\'t worry, we value your privacy \nand won\'t share your data!</string>
    <string name="onboarding_decline_button">No, thank you</string>
    <string name="onboarding_allow_button">Grant permission</string>
    <string name="onboarding_welcome_tv">Welcome!\nFor a better experience, \nGo4Lunch needs your Gps location</string>

    <string name="show_rationale_permission_message">This app works with your permission to GPS location. We only need it to provide you restaurants in your area! If you want to grant this permission, please click on \'Change settings\'.</string>
    <string name="show_rationale_title">Permission required</string>
    <string name="change_settings_dialog_button">change settings</string>

    <string name="list_error_message_no_results">Oops, no results found in your area!</string>
    <string name="list_error_message_no_gps">Please activate you Gps\nto view the list</string>
    <string name="list_no_restaurant_match">No restaurant match found nearby</string>
    <string name="list_error_message_generic">Something went wrong with your request!\nTry later :)</string>

    <string name="distance_meter" translatable="false">m</string>

    <string name="list_restaurant_opening_text_open">Open</string>
    <string name="list_restaurant_opening_text_closed">Closed</string>
    <string name="list_restaurant_opening_text_undefined" translatable="false"> </string>

    <string name="no_restaurant_found">No restaurant found</string>
    <string name="no_restaurant_nearby">No restaurant nearby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="detail_button_call">call</string>
    <string name="detail_button_like">like</string>
    <string name="detail_button_website">website</string>
    <string name="list_workmate_name_joining">%s is joining!</string>
    <string name="list_workmate_name_and_attenting_restaurant">%1$s is eating at %2$s</string>
    <string name="detail_workmate_joining">%s is joining!</string>
    <string name="list_workmate_not_attending">%s has not chosen yet</string>
    <string name="detail_missing_information">Missing information</string>
    <string name="restaurant_item_food_image_a11y">Food image</string>
    <string name="detail_restaurant_chose_fab">Go?</string>
    <string name="detail_restaurant_chosen_fab">Go!</string>
    <string name="detail_restaurant_unchosen_fab">Go?</string>
    <string name="list_avatar_workmate_a11y">Picture of %s</string>
    <string name="no_workmate_text">No workmate is going to eat\n at this restaurant so far!</string>

    <string name="content_des_google_button">Google button for login with google account</string>
    <string name="content_des_github_button">Github button for login with github account</string>
    <string name="content_des_twitter_button">X or Twitter button for login with twitter account</string>

    <string name="settings_activity_title">Settings</string>
    <string name="lunch_reminder_notifications">Lunch reminder notifications</string>
    <string name="settings_activity_gps_button">GPS settings</string>

    <string name="notification_content_title">Time to Go4Lunch!</string>
    <string name="notification_content_start">You</string>
    <string name="notification_content_and">" and "</string>
    <string name="notification_content_last_and">", and "</string>
    <string name="notification_content_going_to_eat_at">" are going to eat at "</string>
    <string name="notification_content_located_at">" located at "</string>
    <string name="notification_content_solo_user">"You are going to eat at "</string>

    <string name="restaurant_image_description">Image of restaurant</string>
    <string name="user_image_description">Image of User</string>
</resources>