<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_activity_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_fragment_container" />

        <TextView
            android:id="@+id/settings_notification_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="8dp"
            android:text="@string/lunch_reminder_notifications"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/round_notifications_24"
            app:drawableTint="@color/color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/settings_notification_title"
                app:layout_constraintTop_toBottomOf="@id/settings_title"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_gps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/settings_activity_gps_button"
            android:textColor="@color/black"
            app:icon="@drawable/baseline_gps_fixed_24"
            app:iconTint="@color/color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_cardview" />

</androidx.constraintlayout.widget.ConstraintLayout>
